--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,19 @@
 <h1>My tasks</h1>
 
-<ul>
-  <% @tasks.each do |task| %>
-    <li>
-      <% if task.completed %>
-        <input type="checkbox" id="checkbox1" name="checkbox1" value="Completed" checked>
-        <%= link_to task.title, task_path(task) %>
-      <% else %>
-        <input type="checkbox" id="checkbox2" name="checkbox2" value="Completed">
-        <%= link_to task.title, task_path(task) %>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+<div class="list">
+  <ul>
+    <% @tasks.each do |task| %>
+      <li>
+        <% if task.completed %>
+          <input type="checkbox" id="checkbox1" name="checkbox1" value="Completed" checked>
+          <%= link_to task.title, task_path(task) %>
+        <% else %>
+          <input type="checkbox" id="checkbox2" name="checkbox2" value="Completed">
+          <%= link_to task.title, task_path(task) %>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
+<%= link_to '+ Add a new task', tasks_new_path %>
