update feature completed

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @task.title %></h1>
 
+<%= link_to '✏️ Edit this task', task_edit_path %>
+
 <div class="details">
   <%= @task.details %>
 </div>
@@ -14,6 +16,6 @@
   <% end %>
 </form>
 
-<%= link_to 'Back to list', tasks_path %>
+<%= link_to '🔙 to list', tasks_path %>
 
 
