--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,8 @@
 <%= form_for(@task) do |f| %>
-<%= f.label :title %>
-<%= f.text_field :title %>
-<%= f.label :details %>
-<%= f.text_field :details %>
+<%= f.label :title %> <br> <br>
+<%= f.text_field :title %> <br> <br>
+<%= f.label :details %> <br> <br>
+<%= f.text_field :details %> <br> <br>
 <%= f.submit %>
 <% end %>
 
